--- a/POC/test-output/old/Default suite/methods-alphabetical.html
+++ b/POC/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>18/08/31 16:18:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>18/08/31 16:18:42</td>   <td>-4009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:21</td>   <td>2461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>18/08/31 16:18:45</td>   <td>-1229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:POC.POC.NewTest@27efef64]">f</td> 
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:24</td>   <td>4678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:16</td>   <td>-3320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:20</td>   <td>705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:22</td>   <td>3079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:POC.POC.NewTest@27efef64]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:18</td>   <td>-1127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f()[pri:0, instance:POC.POC.NewTest@27efef64]">f</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:21</td>   <td>1967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f1()[pri:0, instance:POC.POC.NewTest@27efef64]">f1</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>18/09/03 09:20:23</td>   <td>4258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f2()[pri:0, instance:POC.POC.NewTest@27efef64]">f2</td> 
   <td>main@112061925</td>   <td></td> </tr>
 </table>
